--- a/templates/civicpulse/search/person_search.html
+++ b/templates/civicpulse/search/person_search.html
@@ -251,7 +251,7 @@
                 <label for="state">State</label>
                 <select name="state" id="state">
                     <option value="">All States</option>
-                    {% for state_code in "AL,AK,AZ,AR,CA,CO,CT,DE,FL,GA,HI,ID,IL,IN,IA,KS,KY,LA,ME,MD,MA,MI,MN,MS,MO,MT,NE,NV,NH,NJ,NM,NY,NC,ND,OH,OK,OR,PA,RI,SC,SD,TN,TX,UT,VT,VA,WA,WV,WI,WY,DC"|split:"," %}
+                    {% for state_code in us_states %}
                         <option value="{{ state_code }}" {% if filters.state == state_code %}selected{% endif %}>
                             {{ state_code }}
                         </option>
